welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers() {
  flower(Color.RED);
  avance();
  avance();
  flower(Color.CYAN);
  for (i<-1 to 6) {
    recule();
  }
  droite();
  avance();
  avance();
  gauche();
  avance();
  avance();
  flower(Color.ORANGE);
  for(k<-1 to 4) {
    recule();
  }
  droite();
  avance();
  avance();
  gauche();
  flower(Color.PINK);
  avance();
  avance();
  flower(Color.GREEN);
  for (l<-1 to 6) {
    recule();
}

def flower(c:Color) {
  setCouleurBrosse(c:Color);
  baisseBrosse();
  avance();avance();
  recule();
  gauche();
  avance();
  recule();
  recule();
  avance();
  setCouleurBrosse(Color.YELLOW)
  droite();
  leveBrosse();
  avance();
  
}